--- a/starwars/app/src/main/res/values/strings.xml
+++ b/starwars/app/src/main/res/values/strings.xml
@@ -1,9 +1,14 @@
 <resources>
     <string name="app_name">StarWars</string>
-    <string name="films">films</string>
-    <string name="people">people</string>
-    <string name="planet">planet</string>
-    <string name="specie">specie</string>
-    <string name="starship">starship</string>
-    <string name="vehicle">vehicle</string>
+    <string name="films">Films</string>
+    <string name="people">People</string>
+    <string name="planet">Planets</string>
+    <string name="specie">Species</string>
+    <string name="starship">Starships</string>
+    <string name="vehicle">Vehicles</string>
+    <string name="information">Informacion</string>
+    <string name="director">Director: </string>
+    <string name="producer">Productor: </string>
+    <string name="releaseDate">Fecha: </string>
+    <string name="opening">Opening</string>
 </resources>
