--- a/starwars/app/src/main/res/values/strings.xml
+++ b/starwars/app/src/main/res/values/strings.xml
@@ -7,16 +7,35 @@
     <string name="starship">Starships</string>
     <string name="vehicle">Vehicles</string>
     <string name="information">Informacion</string>
-    <string name="director">Director: </string>
+    <string name="director">Director : </string>
     <string name="producer">Productor: </string>
-    <string name="releaseDate">Fecha: </string>
-    <string name="opening">Opening</string>
-    <string name="height">height:</string>
-    <string name="mass">mass:</string>
-    <string name="hair_color">hair color:</string>
-    <string name="skin_color">skin color:</string>
-    <string name="eye_color">Eye color:</string>
-    <string name="birthday_year">Birthday year:</string>
-    <string name="gender">Gender:</string>
+    <string name="releaseDate">Fecha : </string>
+    <string name="opening">Opening : </string>
+    <string name="height">Height : </string>
+    <string name="mass">Mass : </string>
+    <string name="hair_color">Hair color : </string>
+    <string name="skin_color">Skin color : </string>
+    <string name="eye_color">Eye color : </string>
+    <string name="birthday_year">Birthday year : </string>
+    <string name="gender">Gender : </string>
     <string name="list_error">A ocurrido un error al cargar los datos,  por favor intentelo de nuevo</string>
+    <string name="name">Name : </string>
+    <string name="clasification">Clasification : </string>
+    <string name="designation">Designation : </string>
+    <string name="average_height">Average height : </string>
+    <string name="hair_colors">Hair colors: </string>
+    <string name="eye_colors">Eye colors : </string>
+    <string name="average_lifespan">Average lifespan : </string>
+    <string name="language">Language : </string>
+    <string name="model">model</string>
+    <string name="length">length</string>
+    <string name="cost_in_credits">cost_in_credits</string>
+    <string name="max_atmosphering_speed">max_atmosphering_speed</string>
+    <string name="crew">crew</string>
+    <string name="passengers">passengers</string>
+    <string name="cargo_capacity">cargo_capacity</string>
+    <string name="consumables">consumables</string>
+    <string name="hyperdrive_rating">hyperdrive_rating</string>
+    <string name="mglt">MGLT</string>
+    <string name="starship_class">starship_class</string>
 </resources>
