--- a/starwars/app/src/main/res/values/strings.xml
+++ b/starwars/app/src/main/res/values/strings.xml
@@ -27,15 +27,13 @@
     <string name="eye_colors">Eye colors : </string>
     <string name="average_lifespan">Average lifespan : </string>
     <string name="language">Language : </string>
-    <string name="model">model</string>
-    <string name="length">length</string>
-    <string name="cost_in_credits">cost_in_credits</string>
-    <string name="max_atmosphering_speed">max_atmosphering_speed</string>
-    <string name="crew">crew</string>
-    <string name="passengers">passengers</string>
-    <string name="cargo_capacity">cargo_capacity</string>
-    <string name="consumables">consumables</string>
-    <string name="hyperdrive_rating">hyperdrive_rating</string>
-    <string name="mglt">MGLT</string>
-    <string name="starship_class">starship_class</string>
+    <string name="cost_in_credits">cost in credits : </string>
+    <string name="max_atmosphering_speed">max atmosphering speed : </string>
+    <string name="cargo_capacity">cargo_capacity : </string>
+    <string name="hyperdrive_rating">hyperdrive rating : </string>
+    <string name="mglt">MGLT : </string>
+    <string name="starship_class">starship class : </string>
+    <string name="pilots">pilots : </string>
+    <string name="manufacturer">manufacturer : </string>
+    <string name="model">model : </string>
 </resources>
